--- a/front-end/src/app/components/medecin/medecin-edit/medecin-edit.component.html
+++ b/front-end/src/app/components/medecin/medecin-edit/medecin-edit.component.html
@@ -1,1 +1,22 @@
-<p>medecin-edit works!</p>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h2>Edit Patient</h2>
+      <form (ngSubmit)="updateMedecin()">
+        <div class="form-group">
+          <label for="titre">Titre:</label>
+          <input type="text" class="form-control" id="titre" [(ngModel)]="medecin.titre" name="titre">
+        </div>
+        <div class="form-group">
+          <label for="name">Nom:</label>
+          <input type="text" class="form-control" id="name" [(ngModel)]="medecin.nom" name="name">
+        </div>
+        <div class="form-group">
+          <label for="prenom">Prénom(s):</label>
+          <input type="text" class="form-control" id="prenom" [(ngModel)]="medecin.prenom" name="prenom">
+        </div>
+        <button type="submit" class="btn btn-primary">Modifier</button>
+      </form>
+    </div>
+  </div>
+</div>
