CRUD Rendez-vous

--- a/front-end/src/app/components/medecin/medecin-edit/medecin-edit.component.html
+++ b/front-end/src/app/components/medecin/medecin-edit/medecin-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col">
-      <h2>Edit Patient</h2>
+      <h2>Edit Médecin</h2>
       <form (ngSubmit)="updateMedecin()">
         <div class="form-group">
           <label for="titre">Titre:</label>
