--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,2 +1,21 @@
-<router-outlet>
-</router-outlet>
+<div class="d-flex">
+  <nav class="sidebar bg-dark text-white vh-100">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/medecins">Médecins</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/patients">Patients</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/creneaux">Créneaux</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="content flex-grow-1 p-3">
+    <router-outlet></router-outlet>
+  </div>
+</div>
