--- a/front-end/src/app/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/components/dashboard/dashboard.component.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link text-white" routerLink="/dashboard/creneaux">Créneaux</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" routerLink="/dashboard/rvs">Rendez-vous</a>
+      </li>
     </ul>
   </nav>
   <div class="content flex-grow-1 p-3">
